--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     wearApp project(':wear')
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.google.android.gms:play-services:6.5.87'
+    compile 'com.mcxiaoke.volley:library:1.0.+'
 }
